#2460 Fixing issue: the form is overlapped by the main header

--- a/source/sass/pandora/_homepage-metis.scss
+++ b/source/sass/pandora/_homepage-metis.scss
@@ -23,6 +23,10 @@ body {
   max-width: 210px;
 }
 
+.metis-main-content {
+  margin-top: 4.8rem;
+}
+
 .hero-text {
   display: none;
 }
